[gd_scene load_steps=8 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://source/weapons/WeaponSet.tscn" type="PackedScene" id=2]
[ext_resource path="res://source/actors/Muzzle.gd" type="Script" id=3]
[ext_resource path="res://source/actors/ais/testNewAi/SoldierV2.gd" type="Script" id=4]
[ext_resource path="res://source/actors/utils/SensorPlatform.tscn" type="PackedScene" id=5]
[ext_resource path="res://source/actors/states/StateMachine.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28.0069, 42.7901 )

[node name="SoldierV2" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0.890196, 0.278431, 0.278431, 1 )
position = Vector2( 0, 0.189213 )
scale = Vector2( 1, 1.33318 )
texture = ExtResource( 1 )

[node name="WeaponSet" parent="." instance=ExtResource( 2 )]

[node name="Muzzle" type="Position2D" parent="."]
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = -21.3815
margin_top = -58.3538
margin_right = 18.6185
margin_bottom = -44.3538
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 7 )

[node name="SensorPlatform" parent="." instance=ExtResource( 5 )]
